Update readme and swagger file
